# timetable-research

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  results.tsv
.claude/: settings.json
.claude/skills/benchmark/: SKILL.md
.claude/skills/exp/: SKILL.md
.claude/skills/score/: SKILL.md
.cursor/rules/: main.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: algorithms.md  experiments.md  learnings.md  problem_description.md
docs/experiments/: TEMPLATE.md  exp001_greedy-baseline.md  exp002_lns-v1.md  exp003_lns-v2.md  exp004_constrained-first-restore.md  exp005_lahc-blocking.md  exp006_surgeon-blocking.md  exp007_rescue-gate.md  exp008_adaptive-destroy.md  exp009_perturbation-restart.md  exp010_feasible-perturb.md  exp011_perturb-n100.md  exp012_4thread-600s.md  exp013_three-candidates-EsclA.md  exp014_sa-acceptance.md  exp015_regret-repair.md  exp016_alns-weights.md  exp017_validate-1worker.md  exp018_alns-only-1w.md  exp019_targeted-perturb.md  exp020_window-sort.md  exp021_faster-perturb.md  exp022_heavy-day.md  exp023_larger-destroy.md  exp024_smaller-destroy.md  exp025_tiny-destroy.md  exp026_micro-destroy.md  exp027_nano-destroy.md  exp028_less-perturb.md  exp029_multi-worker.md  exp030_more-workers.md  exp031_sa-accept.md  exp032_lahc.md  exp033_adaptive-destroy.md  exp034_rescue-gate.md  exp035_large-blocking.md  exp036_feasibility-phase.md  exp037_repair-order.md
scripts/: benchmark.py
src/: main.py
src/solvers/: base.py  cp.py  greedy.py  local_search.py
src/utils/: __init__.py  loader.py  model.py  schedule.py
tests/: test_greedy.py  test_local_search.py  test_schedule.py  test_solvers.py
validator/: CMakeLists.txt  IHTP_Validator.cc
